manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    app: keycloak
spec:
  tls:
  - hosts:
    - sso.apps.globalprocessing.com.ar
    secretName: sso-tls
  rules:
  - host: sso.apps.globalprocessing.com.ar
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 8080
